mobile version img spacing corrected

--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,10 @@ body {
   margin: 0 auto;
   margin-bottom: 1rem;
   margin-right: 1rem;
+
+  @media screen and (max-width: 800px) {
+    margin-right: 0;
+  }
 }
 
 .underconst-links {
